--- a/oversight/views/view_oversight_probe_variant_disk_usage.xml
+++ b/oversight/views/view_oversight_probe_variant_disk_usage.xml
@@ -12,6 +12,14 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
         <field name="priority" eval="7"/>
         <field name="inherit_id" ref="view_oversight_probe_template_form"/>
         <field name="arch" type="xml">
+            <xpath expr="//header" position="inside">
+                <button name="button_execute_variant" string="Execute" type="object"
+                        groups="oversight.group_oversight_manager"/>
+                <button name="button_enable_variant" attrs="{'invisible': [('active', '=', True)]}" string="Enable" type="object"
+                        groups="oversight.group_oversight_manager"/>
+                <button name="button_disable_variant" attrs="{'invisible': [('active', '=', False)]}" string="Disable" type="object"
+                        groups="oversight.group_oversight_manager"/>
+            </xpath>
             <group name="group_variant_settings" position="inside">
                 <field name="server"/>
                 <field name="login"/>
@@ -30,7 +38,7 @@ License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html).
         <field name="priority" eval="7"/>
         <field name="inherit_id" ref="view_oversight_probe_template_tree"/>
         <field name="arch" type="xml">
-            <field name="state" position="attributes">
+            <field name="active" position="attributes">
                 <attribute name="invisible">1</attribute>
             </field>
         </field>
